# cordonnet

./: .gitignore  README.md  cheatSheet.txt  pyproject.toml  requirements.txt
config/: default.yaml
cordonnet/: main.py
cordonnet/cli/: clients.py  config.py  detect.py  hotspot.py  status.py
cordonnet/core/: client_manager.py  config_manager.py  hotspot_manager.py  network_manager.py
cordonnet/models/: client.py  config.py  status.py
cordonnet/services/: dnsmasq_service.py  hostapd_service.py  nftables_service.py  systemd_service.py
cordonnet/templates/: dnsmasq.conf.j2  hostapd.conf.j2
cordonnet/utils/: detection.py  logging.py  shell.py  validation.py
